--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homerpage": "http://TravisExline.github.io/flag-company-site",
+  "homepage": "http://TravisExline.github.io/flag-company-site",
   "name": "flag-company-site",
   "version": "0.1.0",
   "private": true,
