--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-big-calendar": "^0.26.0",
     "react-dom": "^16.13.1",
     "react-event-calendar": "^0.3.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
